--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@0xsequence/auth": "^2.3.23",
+		"@0xsequence/network": "^2.3.23",
+		"ethers": "^6.15.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1"
 	},
